kubernetes/traefik-stripprefix.yaml
# Strip prefix /foobar and /fiibar
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: testserver-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /test
    forceSlash: false
